--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <li><a href="#"><i class="fas fa-shopping-cart"></i> Services</a></li>
        <li><a href="#"><i class="fas fa-lightbulb"></i> Solution&nbsp;Blog</a></li>
         <li><a href="#"><i class="fas fa-envelope"></i> Contact</a></li>
-        <li><a href="sign in.html"><i class="fas fa-sign-in-alt"></i> Sign In</a></li>
+        <li><a href="index.html"><i class="fas fa-sign-in-alt"></i> Sign In</a></li>
       </ul>
     </div>
   </header>
